<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Family circle</string>
    <string name="action_settings">Settings</string>
    <string name="accion_cerrar_sesion">Cerrar Sesión</string>
    <string name="title_activity_crear_recado">Crear Recado</string>
    <string name="title_activity_agregar_familiar">Agregar Familiar</string>
    <string name="title_activity_mis_recados">Mis Recados</string>
    <string name="title_activity_registro_usuario">Registro Usuario</string>
    <string name="etTitulo">Título</string>
    <string name="etDescripcion">Descripción</string>
    <string name="btnGuardar">Guardar</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="btnAgregar">Agregar</string>
    <string name="etUsuario">Usuario</string>
    <string name="etUsuario_detalle">Usuario:</string>
    <string name="etNombre">Nombre</string>
    <string name="etApellidos">Apellidos</string>
    <string name="etClave">Contraseña</string>
    <string name="etClaveRepetida">Repita Contraseña</string>
    <string name="btnRegistrar">Registrar</string>
    <string name="title_activity_login_usuario">LoginUsuario</string>
    <string name="btnAceptar">Aceptar</string>
    <string name="btnLogin">Login</string>
    <string name="btnRegistro">Registro</string>
    <string name="btnAgregarRecado">Agregar Recado</string>
    <string name="btnMisRecados">Mis Recados</string>
    <string name="btnLocalizacion">Localizacion</string>
    <string name="btnAgregarAmigo">Agregar Amigo</string>
    <string name="tvDescripcion">Descripción</string>
    <string name="title_activity_google_maps">Localizaciones Amigos</string>
    <string name="title_activity_menu_inicio">MenuInicio</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_detalle_recado">DetalleRecado</string>
    <string name="anadir_familiar">Añadir familiar</string>
    <string name="mis_recados">Mis recados</string>
    <string name="anadir_recado">Añadir Recado</string>


</resources>
