<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.proyecto.fcircle.RegistroUsuario">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etNombre"
            android:layout_gravity="center_horizontal"
            android:hint="@string/etNombre"
            android:layout_marginTop="15dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etApellidos"
            android:layout_gravity="center_horizontal"
            android:hint="@string/etApellidos"
            android:layout_marginTop="15dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etUsuario"
            android:layout_gravity="center_horizontal"
            android:hint="@string/etUsuario"
            android:layout_marginTop="15dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/etClave"
            android:layout_gravity="center_horizontal"
            android:hint="@string/etClave"
            android:layout_marginTop="15dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/etClaveRepetida"
            android:layout_gravity="center_horizontal"
            android:hint="@string/etClaveRepetida"
            android:layout_marginTop="15dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="30dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnRegistrar"
                android:id="@+id/btnRegistrar"
                android:onClick="registrarUsuario"
                android:background="@drawable/fondo_boton_blanco"
                android:textColor="#ff8044ad"
                android:layout_marginRight="30dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnCancelar"
                android:id="@+id/btnCancelar"
                android:onClick="cancelarRegistro"
                android:textColor="#ff8044ad"
                android:background="@drawable/fondo_boton_blanco" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
