<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.proyecto.fcircle.MenuInicio">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal">

            <Button
                android:layout_width="150dp"
                android:layout_height="70dp"
                android:text="@string/btnLocalizacion"
                android:id="@+id/btnLocalizacion"
                android:layout_gravity="center_vertical"
                android:onClick="misLocalizaciones" />

            <Button
                android:layout_width="150dp"
                android:layout_height="70dp"
                android:text="@string/btnAgregarAmigo"
                android:id="@+id/btnAgregarAmigo"
                android:layout_gravity="center_vertical"
                android:onClick="agregarFamiliar" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal">

            <Button
                android:layout_width="150dp"
                android:layout_height="70dp"
                android:text="@string/btnAgregarRecado"
                android:id="@+id/btnAgregarRecado"
                android:layout_gravity="center_vertical"
                android:onClick="agregarRecado" />

            <Button
                android:layout_width="150dp"
                android:layout_height="70dp"
                android:text="@string/btnMisRecados"
                android:id="@+id/btnMisRecados"
                android:layout_gravity="center_vertical"
                android:onClick="misRecados" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
