<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.proyecto.fcircle.AgregarFamiliar">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etUsuario"
            android:layout_gravity="center_horizontal"
            android:hint="@string/etUsuario"
            android:layout_marginTop="25dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="30dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnAgregar"
                android:id="@+id/btAgregar"
                android:onClick="agregar"
                android:background="@drawable/fondo_boton_morado"
                android:textColor="#FFFFFF"
                android:layout_marginRight="30dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnCancelar"
                android:id="@+id/btCancelar"
                android:onClick="cancelar"
                android:background="@drawable/fondo_boton_morado"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
